--- a/hoje.html
+++ b/hoje.html
@@ -16,7 +16,7 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 <style>
-  /* ----- ESTILOS GLOBAIS (base do index + específicos hoje) ----- */
+  /* ----- ESTILOS GLOBAIS (mesma base do index) ----- */
   html, body {
     margin: 0;
     padding: 0;
@@ -131,12 +131,14 @@
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     position: relative;
+    -webkit-overflow-scrolling: touch; /* rolagem suave no iOS */
   }
   .hoje-table {
     width: 100%;
     border-collapse: collapse;
     font-family: "Montserrat";
     font-size: 13px;
+    min-width: 600px; /* garante rolagem horizontal em telas pequenas */
   }
   .hoje-table th {
     background-color: #164CAD;
@@ -158,39 +160,56 @@
     padding: 10px 8px;
     border-bottom: 1px solid #e0e0e0;
     text-align: center;
+    white-space: nowrap; /* evita quebra de linha, forçando a rolagem */
   }
   .hoje-table tbody tr:nth-child(even) {
     background-color: #f9f9f9;
   }
 
-  /* ----- REGRAS PARA DISPOSITIVOS TOUCH (copiadas do index + adaptações para hoje) ----- */
+  /* ----- REGRAS PARA DISPOSITIVOS TOUCH (copiadas do index e adaptadas) ----- */
   .touch-device {
     font-size: 18px;
   }
 
+  /* Navbar em touch: exatamente como no index */
   .touch-device .navbar {
-    font-size: 18px;
+    font-size: 18px; /* só aumenta a fonte, mantendo layout */
   }
 
-  /* Ajustes para a tabela no touch */
+  /* Ajustes para a tabela em touch */
   .touch-device .hoje-table {
     font-size: 15px;
+    min-width: 750px; /* um pouco maior para dedos */
   }
   .touch-device .hoje-table th,
   .touch-device .hoje-table td {
-    padding: 14px 10px;
+    padding: 14px 12px; /* mais espaçamento para toque */
   }
   .touch-device .hoje-table th {
-    padding: 16px 12px; /* cabeçalho com área de toque maior */
+    padding: 16px 12px;
   }
 
-  /* Caixa do Ibovespa */
+  /* Larguras mínimas para cada coluna em touch (evita compressão) */
+  .touch-device .hoje-table th:nth-child(1),
+  .touch-device .hoje-table td:nth-child(1) { min-width: 120px; } /* Ação */
+  .touch-device .hoje-table th:nth-child(2),
+  .touch-device .hoje-table td:nth-child(2) { min-width: 150px; } /* Setor */
+  .touch-device .hoje-table th:nth-child(3),
+  .touch-device .hoje-table td:nth-child(3) { min-width: 100px; } /* Peso */
+  .touch-device .hoje-table th:nth-child(4),
+  .touch-device .hoje-table td:nth-child(4) { min-width: 100px; } /* Variação */
+  .touch-device .hoje-table th:nth-child(5),
+  .touch-device .hoje-table td:nth-child(5) { min-width: 120px; } /* Contribuição */
+  .touch-device .hoje-table th:nth-child(6),
+  .touch-device .hoje-table td:nth-child(6) { min-width: 120px; } /* % Contrib */
+
+  /* Caixa do Ibovespa em touch */
   .touch-device .ibovespa-box {
     font-size: 16px;
     padding: 18px 22px;
   }
 
-  /* Botão de atualização maior */
+  /* Botão de atualização maior em touch */
   .touch-device .refresh-btn {
     width: 48px;
     height: 48px;
@@ -200,92 +219,30 @@
     width: 36px;
   }
 
-  /* Título da tabela */
+  /* Título da tabela em touch */
   .touch-device .header-container .table-title {
     font-size: 20px;
   }
 
-  /* As regras abaixo (do index) não prejudicam hoje, mas garantem consistência */
-  .touch-device .period-controls {
-    flex-direction: column;
-    align-items: center;
-  }
-  .touch-device .period-buttons {
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    justify-content: center;
-    -webkit-overflow-scrolling: touch;
-    padding-bottom: 10px;
-    width: 100%;
-    scrollbar-width: thin;
-  }
-  .touch-device .period-btn {
-    flex-shrink: 0;
-    font-size: 16px;
-    padding: 10px 18px;
-  }
-  .touch-device .period-separator {
-    display: block;
-    font-size: 17px;
-    color: #666;
-    margin: 5px 0;
-    font-style: normal;
-    font-weight: 300;
-    letter-spacing: 0.5px;
-  }
-  .touch-device .custom-range-container {
-    margin-left: 0;
-    width: auto;
-    justify-content: center;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    padding: 10px 15px;
-    flex-wrap: nowrap;
-    gap: 8px;
-  }
-  .touch-device .custom-range-container label {
-    font-size: 16px;
-    white-space: nowrap;
-  }
-  .touch-device .date-input {
-    font-size: 16px;
-    width: auto;
-    min-width: 120px;
-    padding: 8px 10px;
-    white-space: nowrap;
-  }
-  .touch-device .apply-btn {
-    font-size: 16px;
-    padding: 8px 16px;
-    white-space: nowrap;
-  }
-  .touch-device .contributions-table {
-    font-size: 15px;
-  }
-  .touch-device .contributions-table th,
-  .touch-device .contributions-table td {
-    padding: 14px 10px;
-  }
-  .touch-device .table-title {
-    font-size: 18px;
-  }
-  .touch-device .tables-wrapper {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  .touch-device .table-section {
-    width: 100%;
-    margin-bottom: 20px;
-  }
+  /* (Regras adicionais do index, mantidas para consistência, mas não interferem) */
+  .touch-device .period-controls { flex-direction: column; align-items: center; }
+  .touch-device .period-buttons { flex-wrap: nowrap; overflow-x: auto; justify-content: center; -webkit-overflow-scrolling: touch; padding-bottom: 10px; width: 100%; scrollbar-width: thin; }
+  .touch-device .period-btn { flex-shrink: 0; font-size: 16px; padding: 10px 18px; }
+  .touch-device .period-separator { display: block; font-size: 17px; color: #666; margin: 5px 0; font-style: normal; font-weight: 300; letter-spacing: 0.5px; }
+  .touch-device .custom-range-container { margin-left: 0; width: auto; justify-content: center; background-color: #f0f0f0; border: 1px solid #ccc; padding: 10px 15px; flex-wrap: nowrap; gap: 8px; }
+  .touch-device .custom-range-container label { font-size: 16px; white-space: nowrap; }
+  .touch-device .date-input { font-size: 16px; width: auto; min-width: 120px; padding: 8px 10px; white-space: nowrap; }
+  .touch-device .apply-btn { font-size: 16px; padding: 8px 16px; white-space: nowrap; }
 </style>
 </head>
 <body>
-<!-- Detecção de touch (igual ao index) -->
+<!-- Detecção de toque (exatamente como no index) -->
 <script>
   (function() {
     const isTouchDevice = ('ontouchstart' in window) || (navigator.maxTouchPoints > 0);
     if (isTouchDevice) {
       document.body.classList.add('touch-device');
+      console.log('Touch device detected - classe adicionada'); // opcional, para debug
     }
   })();
 </script>
