--- a/hoje.html
+++ b/hoje.html
@@ -10,6 +10,7 @@
   gtag('js', new Date());
   gtag('config', 'G-62WVY9D4XQ');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9542816841972027" crossorigin="anonymous"></script>
 <title>Performance Ibov - Hoje</title>
 <!-- Favicon -->
 <link rel="icon" type="image/x-icon" href="favicon.ico">
