--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     gtag('js', new Date());
     gtag('config', 'G-62WVY9D4XQ');
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9542816841972027" crossorigin="anonymous"></script>
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
